<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FinalFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/fn_map_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/padding_ver_large"
        android:layout_marginTop="@dimen/padding_hor_large"
        android:layout_marginEnd="@dimen/padding_ver_large"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHor02"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHor01" />

    <TextView
        android:id="@+id/fn_desc_txt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/padding_ver"
        android:layout_marginTop="@dimen/padding_hor_large"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guidelineVer01"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fn_map_view" />

    <TextView
        android:id="@+id/fn_sns_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_hor_large"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVer01"
        app:layout_constraintTop_toTopOf="@+id/guidelineHor02"
        tools:text="@string/fn_sns_ttl_label" />

    <TextView
        android:id="@+id/fn_sns_type_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_hor_large"
        android:layout_marginEnd="@dimen/padding_ver_large"
        android:text="@string/fn_sns_type_label"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVer01"
        app:layout_constraintTop_toBottomOf="@+id/fn_sns_title" />

    <TextView
        android:id="@+id/fn_sns_type_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_ver_large"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVer01"
        app:layout_constraintTop_toBottomOf="@+id/fn_sns_type_label" />

    <TextView
        android:id="@+id/fn_sns_measure_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_hor_large"
        android:layout_marginEnd="@dimen/padding_ver_large"
        android:text="@string/fn_sns_measure_label"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineVer01"
        app:layout_constraintTop_toBottomOf="@+id/fn_sns_type_txt" />

    <TextView
        android:id="@+id/fn_sns_measure_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_ver_large"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fn_desc_txt"
        app:layout_constraintTop_toBottomOf="@+id/fn_sns_measure_label" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHor01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHor02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVer01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>